[gd_scene load_steps=17 format=3 uid="uid://thbunqfboaq0"]

[ext_resource type="Script" uid="uid://bhgmxo52mu66j" path="res://scripts/scenes/combat_scene.gd" id="1_hxvc4"]
[ext_resource type="Texture2D" uid="uid://bltisnnddxogx" path="res://assets/texture/background/game_background_1/layers/battleground.png" id="2_6kgbk"]
[ext_resource type="Texture2D" uid="uid://ts74dkhjm30l" path="res://assets/texture/background/game_background_1/layers/back_land.png" id="3_x2yey"]
[ext_resource type="Texture2D" uid="uid://bq017wq6c0kk4" path="res://assets/texture/background/game_background_1/layers/back_decor.png" id="4_s4ntn"]
[ext_resource type="Texture2D" uid="uid://o0iacojv61wy" path="res://assets/texture/background/game_background_1/layers/ground_decor.png" id="5_nkdg0"]
[ext_resource type="Texture2D" uid="uid://b4u5ewpyjas2f" path="res://assets/texture/background/game_background_1/layers/front_decor.png" id="6_gvreh"]
[ext_resource type="PackedScene" uid="uid://bgj5fmjvlf8j" path="res://scenes/ui/ui_combat_scene.tscn" id="7_6kgbk"]
[ext_resource type="Script" uid="uid://drldqlyqnyu6k" path="res://addons/GodotUIFramework/source/core/components/ui_group_component.gd" id="7_aweq8"]
[ext_resource type="Shader" uid="uid://cypl0brnqofsn" path="res://resources/shader/combat_post_process.gdshader" id="7_x2yey"]
[ext_resource type="Script" uid="uid://cwol0omsjqlwy" path="res://addons/GodotUIFramework/source/core/resource/ui_view_type.gd" id="8_p16ct"]
[ext_resource type="Script" uid="uid://cdtge4wnkvm45" path="res://addons/GodotUIFramework/source/core/resource/ui_scene_type.gd" id="9_1nl3e"]
[ext_resource type="PackedScene" uid="uid://cokqr3cv3dqo6" path="res://scenes/character/character.tscn" id="10_w25t6"]
[ext_resource type="Script" uid="uid://c6pginvp3p1fm" path="res://scripts/systems/camera/shake_camera_2d.gd" id="13_nkdg0"]
[ext_resource type="Script" uid="uid://di6tblgxc8tmd" path="res://scripts/systems/combat_system/combat_presenter.gd" id="13_s4ntn"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_nkdg0"]
shader = ExtResource("7_x2yey")
shader_parameter/blur_amount = 3.0
shader_parameter/vignette_intensity = 0.5
shader_parameter/brightness = 0.7

[sub_resource type="Resource" id="Resource_y7bqf"]
script = ExtResource("9_1nl3e")
group_id = &"game_scene"
layer = 0
transition_name = &""
hide_others = false
modal = false
ID = &"ui_game_scene"
scene_path = "uid://bgj5fmjvlf8j"
preload_mode = 1
cache_mode = 0
pool_capacity = 10
metadata/_custom_type_script = ExtResource("9_1nl3e")

[node name="CombatScene" type="Node2D"]
script = ExtResource("1_hxvc4")

[node name="BackgroundLayer" type="CanvasLayer" parent="."]
layer = -128

[node name="Parallax2D3" type="Parallax2D" parent="BackgroundLayer"]
repeat_size = Vector2(1152, 0)
metadata/_edit_lock_ = true

[node name="Sprite2D" type="Sprite2D" parent="BackgroundLayer/Parallax2D3"]
scale = Vector2(0.3, 0.3)
texture = ExtResource("2_6kgbk")
centered = false

[node name="Parallax2D2" type="Parallax2D" parent="BackgroundLayer"]
repeat_size = Vector2(1152, 0)
metadata/_edit_lock_ = true

[node name="Sprite2D" type="Sprite2D" parent="BackgroundLayer/Parallax2D2"]
scale = Vector2(0.3, 0.3)
texture = ExtResource("3_x2yey")
centered = false

[node name="Parallax2D" type="Parallax2D" parent="BackgroundLayer"]
repeat_size = Vector2(1152, 0)
metadata/_edit_lock_ = true

[node name="Sprite2D" type="Sprite2D" parent="BackgroundLayer/Parallax2D"]
scale = Vector2(0.3, 0.3)
texture = ExtResource("4_s4ntn")
centered = false

[node name="Parallax2D5" type="Parallax2D" parent="BackgroundLayer"]
repeat_size = Vector2(1152, 0)
metadata/_edit_lock_ = true

[node name="Sprite2D" type="Sprite2D" parent="BackgroundLayer/Parallax2D5"]
scale = Vector2(0.3, 0.3)
texture = ExtResource("5_nkdg0")
centered = false

[node name="ProspectsLayer" type="CanvasLayer" parent="."]
layer = 64

[node name="Parallax2D4" type="Parallax2D" parent="ProspectsLayer"]
metadata/_edit_lock_ = true

[node name="Sprite2D" type="Sprite2D" parent="ProspectsLayer/Parallax2D4"]
scale = Vector2(0.3, 0.3)
texture = ExtResource("6_gvreh")
centered = false
metadata/_edit_lock_ = true

[node name="PostProcessLayer" type="CanvasLayer" parent="."]
layer = 16

[node name="ColorRect" type="ColorRect" parent="PostProcessLayer"]
material = SubResource("ShaderMaterial_nkdg0")
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="ActionLayer" type="CanvasLayer" parent="."]
layer = 32

[node name="Character" parent="ActionLayer" instance=ExtResource("10_w25t6")]
position = Vector2(316, 400)
scale = Vector2(1.8, 1.8)

[node name="Character2" parent="ActionLayer" instance=ExtResource("10_w25t6")]
position = Vector2(836, 440)
scale = Vector2(1.8, 1.8)

[node name="UILayer" type="CanvasLayer" parent="."]
layer = 128

[node name="UICombatScene" parent="UILayer" instance=ExtResource("7_6kgbk")]

[node name="UIGroupComponent" type="Node" parent="UILayer"]
script = ExtResource("7_aweq8")
group_name = &"game_scene"
view_types = Array[ExtResource("8_p16ct")]([SubResource("Resource_y7bqf")])
metadata/_custom_type_script = "uid://drldqlyqnyu6k"

[node name="PlayerMarkers" type="Node2D" parent="."]
unique_name_in_owner = true
position = Vector2(0, -50)
metadata/_edit_lock_ = true
metadata/_edit_group_ = true

[node name="Marker2D" type="Marker2D" parent="PlayerMarkers"]
position = Vector2(100, 420)

[node name="PlayerCharacter" parent="PlayerMarkers/Marker2D" groups=["Character", "Player"] instance=ExtResource("10_w25t6")]

[node name="Marker2D2" type="Marker2D" parent="PlayerMarkers"]
position = Vector2(230, 420)

[node name="Character" parent="PlayerMarkers/Marker2D2" instance=ExtResource("10_w25t6")]

[node name="Marker2D3" type="Marker2D" parent="PlayerMarkers"]
position = Vector2(360, 420)

[node name="Character" parent="PlayerMarkers/Marker2D3" instance=ExtResource("10_w25t6")]

[node name="Marker2D4" type="Marker2D" parent="PlayerMarkers"]
position = Vector2(490, 420)

[node name="Character" parent="PlayerMarkers/Marker2D4" instance=ExtResource("10_w25t6")]

[node name="EnemyMarkers" type="Node2D" parent="."]
unique_name_in_owner = true
position = Vector2(0, -50)
metadata/_edit_lock_ = true
metadata/_edit_group_ = true

[node name="Marker2D" type="Marker2D" parent="EnemyMarkers"]
position = Vector2(690, 420)
gizmo_extents = 128.0

[node name="Character" parent="EnemyMarkers/Marker2D" instance=ExtResource("10_w25t6")]

[node name="Marker2D2" type="Marker2D" parent="EnemyMarkers"]
position = Vector2(820, 420)
gizmo_extents = 128.0

[node name="Character" parent="EnemyMarkers/Marker2D2" instance=ExtResource("10_w25t6")]

[node name="Marker2D3" type="Marker2D" parent="EnemyMarkers"]
position = Vector2(950, 420)
gizmo_extents = 128.0

[node name="Character" parent="EnemyMarkers/Marker2D3" instance=ExtResource("10_w25t6")]

[node name="Marker2D4" type="Marker2D" parent="EnemyMarkers"]
position = Vector2(1080, 420)
gizmo_extents = 128.0

[node name="Character" parent="EnemyMarkers/Marker2D4" instance=ExtResource("10_w25t6")]

[node name="Camera2D" type="Camera2D" parent="."]
position = Vector2(576, 324)
script = ExtResource("13_nkdg0")

[node name="CombatPresenter" type="Node" parent="." node_paths=PackedStringArray("action_layer", "camera", "post_process")]
script = ExtResource("13_s4ntn")
action_layer = NodePath("../ActionLayer")
camera = NodePath("../Camera2D")
post_process = NodePath("../PostProcessLayer/ColorRect")
y_offset = 400.0
range_offset = 220.0
metadata/_custom_type_script = "uid://di6tblgxc8tmd"
